# Team-Project

./: .gitignore  AABB.h  AArect.h  BVH_Node.h  Box.h  CMakeLists.txt  Camera.h  Color.h  Hittable.h  HittableList.h  README.md  Ray.h  Rotate_Y.h  Sphere.h  Translate.h  Vec3.h  bubbleLocation.txt  buildScene.py  buildScene_util.py  combine.py  foobar  fragmentShaderOrigin.frag  index.html  main.cpp  randomDiagram.py  util.h  writeup.html
coursejs/: main.js  parser.js  raytracer.js  scene.js
js/: student.js
results/: download  download (100)  download (11)  download (12)  download (14)  download (17)  download (19)  download (2)  download (21)  download (24)  download (26)  download (32)  download (34)  download (35)  download (37)  download (39)  download (4)  download (44)  download (47)  download (49)  download (50)  download (52)  download (55)  download (56)  download (60)  download (63)  download (64)  download (66)  download (7)  download (70)  download (72)  download (74)  download (76)  download (78)  download (81)  download (83)  download (84)  download (88)  download (9)  download (91)  (+22 more)
scenes/: default.json  mesh.json  myscene.json
shaders/: fragmentShader.frag  vertexShader.vert
